actor list on modal overhangs its parent, trying to fix with flex set to wrap and max width

--- a/style.css
+++ b/style.css
@@ -84,19 +84,20 @@ form {
 } */
 /* inside #movieInfo */
     .actorList { /* <ul> */
-        width: 100%;
+        max-width: 100%;
         list-style-type: none; 
         display: flex; 
         flex-direction: row;
-        justify-content: flex-start;
+        flex-wrap: wrap;
+        justify-content: space-between;
         padding: 0;
     }
     .actorList li {
-        margin-right: 10px; 
         color: #e4e4e4; 
         padding: 5px 10px; 
         background-color: #747474; 
         border-radius: 5px;
+        margin-bottom: 8px;
     }
     .actorList li:hover {
         cursor: pointer;
